--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ dist: trusty
 
 sudo: false
 
+services:
+  - docker
+
 os: linux
 compiler: clang
 
@@ -21,15 +24,6 @@ addons:
       # this package is essential for testing Electron in a headless fashion
       # https://github.com/electron/electron/blob/master/docs/tutorial/testing-on-headless-ci.md
       - xvfb
-      # packages required for electron-installer-debian
-      - fakeroot
-      - dpkg
-      # packages required for electron-installer-redhat
-      - rpm
-      # packages required for electron-installer-appimage
-      - xz-utils
-      - xorriso
-      - zsync
 
 branches:
   only:
@@ -62,7 +56,8 @@ after_failure:
   - yarn test:review
 
 after_success:
-  - yarn run package
+  - docker run -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "cd $(pwd) &&
+    ./script/docker-package.sh"
 
 deploy:
   provider: releases
