switch to vanilla libcurl dependency

--- a/script/electron-builder-linux.yml
+++ b/script/electron-builder-linux.yml
@@ -37,7 +37,6 @@ snap:
   confinement: 'classic'
   stagePackages:
     - default
-    - git-core
-    - libcurl3-gnutls
+    - libcurl3
     - libsecret-1-0
     - openssh-client
