--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,8 +34,8 @@ jobs:
           shiftkey/github-desktop:snapcraft-node-yarn sh -c "yarn run package"
         displayName: 'Package in Container'
         condition:
-          and(succeeded(), eq(variables['Build.SourceBranch'],
-          'refs/heads/linux'))
+          and(succeeded(), startsWith(variables['Build.SourceBranch'],
+          'refs/tags/'))
       - task: CopyFiles@2
         inputs:
           contents: |
@@ -47,12 +47,12 @@ jobs:
           targetFolder: $(Build.ArtifactStagingDirectory)
           flattenFolders: true
         condition:
-          and(succeeded(), eq(variables['Build.SourceBranch'],
-          'refs/heads/linux'))
+          and(succeeded(), startsWith(variables['Build.SourceBranch'],
+          'refs/tags/'))
       - task: PublishBuildArtifacts@1
         condition:
-          and(succeeded(), eq(variables['Build.SourceBranch'],
-          'refs/heads/linux'))
+          and(succeeded(), startsWith(variables['Build.SourceBranch'],
+          'refs/tags/'))
 
   - job: Lint
     pool:
