--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,8 +52,8 @@ jobs:
           docker run -u $(id -u):$(id -g) -v $(Build.SourcesDirectory):/src -v
           /tmp/local/.cache:/.cache -v /tmp/local/.yarn:/.yarn -v
           /tmp/local/.node-gyp:/.node-gyp -v /tmp/local/.local:/.local -w /src
-          shiftkey/github-desktop:trusty-node-yarn-git sh -c "yarn install
-          --force && yarn build:prod"
+          shiftkey/desktop:trusty-node-yarn-git sh -c "yarn install --force &&
+          yarn build:prod"
         displayName: 'Build in container'
       - script: |
           export DISPLAY=':99.0'
@@ -64,7 +64,7 @@ jobs:
           docker run -v $(Build.SourcesDirectory):/src -v
           /tmp/local/.cache:/.cache -v /tmp/local/.yarn:/.yarn -v
           /tmp/local/.node-gyp:/.node-gyp -v /tmp/local/.local:/.local -w /src
-          shiftkey/github-desktop:snapcraft-node-yarn sh -c "yarn run package"
+          shiftkey/desktop:snapcraft-node-yarn sh -c "yarn run package"
         displayName: 'Package in Container'
         condition:
           and(succeeded(), startsWith(variables['Build.SourceBranch'],
