add protocol handlers for Desktop to  builder config

--- a/script/electron-builder-linux.yml
+++ b/script/electron-builder-linux.yml
@@ -3,6 +3,9 @@ linux:
   category: 'GNOME;GTK;Development'
   packageCategory: 'GNOME;GTK;Development'
   icon: 'app/static/logos'
+  mimeTypes:
+    - x-scheme-handler/x-github-client
+    - x-scheme-handler/x-github-desktop-auth
   target:
     - deb
     - rpm
